# AgentGuard

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION_PLAN.md  PRODUCTION_HARDENING_PLAN.md  README.md  architecture_diagram.md  docker-compose.yml  requirements.txt
backend/: manage.py
backend/api/: admin.py  agent_models.py  agent_serializers.py  agent_views.py  alert_views.py  apps.py  auth_models.py  auth_utils.py  auth_views.py  authentication.py  health_views.py  models.py  permissions.py  root_views.py  serializers.py  span_service.py  tasks.py  test_auth.py  tests.py  urls.py  views.py
backend/api/eval_engine/: runner.py  scorers.py
backend/promptops_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
demo/: inject_failure.py  run_demo.py
demo/agents/: __init__.py  monitors.py
docker/: entrypoint.sh
mcp_server/: __init__.py  ai_assistant.py  anomaly.py  server.py  splunk_client.py
scripts/: demo.py  setup.sh
sdk/: README.md  pyproject.toml  setup.py  test_sdk.py
sdk/agentguard/: __init__.py  alert_handler.py  client.py  context.py  tracer.py  utils.py
sdk/agentguard/exporters/: __init__.py  backend.py  base.py  splunk_hec.py
sdk/promptops/: __init__.py  client.py  tracer.py  utils.py
seer/: README.md  __init__.py  actions.py  cli.py  correlate.py  fsm.py  ledger.py  mcp_step.py  publish.py  remediate.py  test_seer.py  verdict.py  verify.py
splunk_app/: README.md  mltk_setup.py
splunk_app/default/: alerts.conf  app.conf  savedsearches.conf
(+7 files in other folders)
